# TimerApp

./: README.md  pyproject.toml
.github/workflows/: build.yml
libs/logger/: __init__.py  config.py
src/: main.py
src/styles/: styles.css
src/ui/: __init__.py  window.py
src/utilities/: QTimeEdit_sounds.py  __init__.py  button_sounds.py  load_fonts.py  load_stylesheet.py  play_sound.py  random_image_loader.py  resource_path_helper.py
src/utilits/: QTimeEdit_sounds.py  __init__.py  button_sounds.py  load_fonts.py  load_stylesheet.py  random_image_loader.py  sounds_play_with_smth.py  timer.py
tests/: test_timer_logic.py  ui_window_test.py
