[project]
name = "TimerApp"
version = "0.1.0"
authors = [
    {name  = "Vanny", email = "msvankaspr@gmail.com"}
]
description = "A Qt-based timer application"
readme = "README.md"
dynamic = ["dependencies", "requires-python"]

[tool.poetry]
package-mode = false

include = [
    "logs/.gitkeep", # Сохраняет пустую папку
    "libs/logger/**/*.py",
    "src/fonts/*.ttf",
    "src/styles/*.css"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-qt = "^4.5.0"

[virtualenvs]
in-project = true
path= ".env"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pyqt5 = "^5.15.11"
sip = "^6.6.2"
black = "^25.1.0"

